# Qaterial

./: CMakeLists.txt
cmake/: Dependencies.cmake  FetchGoogleFontCMake.cmake  FetchMaterialDesignIcons.cmake  FetchQOlm.cmake  FetchQaterial.cmake  FetchQtGeneratorCMake.cmake  FetchQtStaticCMake.cmake  FetchSpdlog.cmake
plugins/: CMakeLists.txt
plugins/Qaterial/: CMakeLists.txt  Fonts.qml  PostCmd.cmake  qaterialplugin.cpp  resource.qrc
plugins/app/: CMakeLists.txt
plugins/app/qml/: TextUsingQaterialFonts.qml  app.qrc  main.qml
plugins/app/src/: main.cpp
plugins/app/src/qml/: main.qml
src/Qaterial/: IconLabelImpl.hpp  Layout.cpp  Layout.hpp  Logger.cpp  StepperElement.hpp  TreeElement.hpp  Utils.cpp
